@@ -11,7 +11,6 @@ import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.security.access.prepost.PreAuthorize;
 import org.springframework.security.core.Authentication;
-import org.springframework.security.core.annotation.AuthenticationPrincipal;
 import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.web.bind.annotation.*;
 import org.springframework.web.server.ResponseStatusException;
@@ -21,7 +20,6 @@ import java.time.format.DateTimeFormatter;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/api/taches")
@@ -32,8 +30,6 @@ public class TacheController {
     private final UserRepository userRepository;
     private final TacheRepository tacheRepository;
     private final ProjetRepository projetRepository;
-
-
 
     public TacheController(TacheService tacheService,
                            ConsultantRepository consultantRepository,
@@ -47,25 +43,21 @@ public class TacheController {
         this.projetRepository = projetRepository;
     }
 
-
-
-    // ✅ Création de tâche -> seulement CHEF_DE_PROJET
+    // ✅ Création de tâche
     @PostMapping
     @PreAuthorize("hasRole('CHEF_DE_PROJET')")
     public ResponseEntity<TacheResponse> createTache(@RequestBody TacheRequest request) {
         return ResponseEntity.ok(tacheService.createTache(request));
     }
 
-    // ✅ Liste des tâches -> accessible aux deux rôles
+
     @GetMapping
     @PreAuthorize("hasAnyRole('CHEF_DE_PROJET','CONSULTANT')")
     public ResponseEntity<List<TacheResponse>> getAllTaches() {
         return ResponseEntity.ok(tacheService.getAllTaches());
     }
 
-
-
-    // ✅ Suppression -> seulement CHEF_DE_PROJET
+    // ✅ Suppression
     @DeleteMapping("/{id}")
     @PreAuthorize("hasRole('CHEF_DE_PROJET')")
     public ResponseEntity<Void> deleteTache(@PathVariable Long id) {
@@ -73,7 +65,7 @@ public class TacheController {
         return ResponseEntity.noContent().build();
     }
 
-    // ✅ Statistiques par projet -> CHEF_DE_PROJET uniquement
+    // ✅ Statistiques par projet
     @GetMapping("/statistiques/{nomProjet}")
     @PreAuthorize("hasRole('CHEF_DE_PROJET')")
     public ResponseEntity<StatistiquesTacheResponse> getStatistiques(@PathVariable String nomProjet) {
@@ -84,6 +76,7 @@ public class TacheController {
     @PreAuthorize("hasRole('CHEF_DE_PROJET')")
     public ResponseEntity<List<AffectationDto>> getAffectations() {
         List<Consultant> affectations = consultantRepository.findAll();
+
         List<AffectationDto> dtos = affectations.stream()
                 .map(a -> new AffectationDto(
                         a.getUser().getId(),
@@ -91,7 +84,8 @@ public class TacheController {
                         a.getProjet().getId(),
                         a.getProjet().getNomProjet()
                 ))
-                .collect(Collectors.toList());
+                .toList(); // ✅ Remplacement Collectors.toList()
+
         return ResponseEntity.ok(dtos);
     }
 
@@ -102,15 +96,15 @@ public class TacheController {
                 .stream()
                 .map(c -> {
                     Map<String, Object> map = new HashMap<>();
-                    map.put("id", c.getUser().getId());   // ✅ id réel (user_id)
+                    map.put("id", c.getUser().getId());
                     map.put("nomComplet", c.getNomComplet());
                     return map;
                 })
                 .distinct()
-                .collect(Collectors.toList());
+                .toList(); // ✅ Remplacement
+
         return ResponseEntity.ok(consultants);
     }
-
 
     @GetMapping("/consultants/{consultantId}/projets")
     @PreAuthorize("hasRole('CHEF_DE_PROJET')")
@@ -126,7 +120,7 @@ public class TacheController {
                     return map;
                 })
                 .distinct()
-                .collect(Collectors.toList());
+                .toList(); // ✅ Remplacement
 
         return ResponseEntity.ok(projets);
     }
@@ -142,7 +136,6 @@ public class TacheController {
 
         DateTimeFormatter formatter = DateTimeFormatter.ofPattern("yyyy-MM-dd");
 
-        // ✅ Sécuriser le parsing des dates
         if (request.getDateAffectation() != null && !request.getDateAffectation().isBlank()) {
             tache.setDateAffectation(LocalDate.parse(request.getDateAffectation(), formatter));
         }
@@ -150,36 +143,34 @@ public class TacheController {
         if (request.getDateLimite() != null && !request.getDateLimite().isBlank()) {
             tache.setDateLimite(LocalDate.parse(request.getDateLimite(), formatter));
         }
+
         if (request.getConsultantId() != null) {
             Consultant consultant = consultantRepository.findByUserId(request.getConsultantId())
                     .stream().findFirst()
-                    .orElseThrow(() -> new RuntimeException("Consultant non trouvé pour cet utilisateur"));
+                    .orElseThrow(() -> new RuntimeException("Consultant non trouvé"));
             tache.setConsultant(consultant);
         }
 
-// 🔁 Récupérer le projet
         if (request.getProjetId() != null) {
             Projet projet = projetRepository.findById(request.getProjetId())
                     .orElseThrow(() -> new RuntimeException("Projet non trouvé"));
             tache.setProjet(projet);
         }
-        // ✅ Mise à jour des autres champs
+
         if (request.getPriorite() != null) {
             tache.setPriorite(request.getPriorite());
         }
 
         tache.setDescription(request.getDescription());
-        tache.setCommentaire(request.getCommentaire()); // ✅ Ajouté pour permettre au chef de modifier le commentaire
+        tache.setCommentaire(request.getCommentaire());
 
-        // ✅ Sauvegarde et réponse
         try {
             return ResponseEntity.ok(tacheService.mapToResponse(tacheRepository.save(tache)));
         } catch (Exception e) {
-            e.printStackTrace(); // Pour voir l'erreur dans la console
             throw new ResponseStatusException(HttpStatus.INTERNAL_SERVER_ERROR, "Erreur lors de la mise à jour", e);
         }
     }
-    // ✅ Mise à jour du statut
+
     @PutMapping("/{id}/statut")
     @PreAuthorize("hasAnyRole('CHEF_DE_PROJET','CONSULTANT')")
     public ResponseEntity<TacheResponse> updateStatut(
@@ -188,7 +179,7 @@ public class TacheController {
             @RequestParam(required = false) String commentaire) {
 
         Authentication authentication = SecurityContextHolder.getContext().getAuthentication();
-        String email = authentication.getName(); // récupère l'email de l'utilisateur connecté via JWT
+        String email = authentication.getName();
 
         User user = userRepository.findByEmail(email)
                 .orElseThrow(() -> new RuntimeException("Utilisateur non trouvé"));
@@ -201,7 +192,6 @@ public class TacheController {
     public ResponseEntity<List<TacheResponse>> getMesTaches(
             @RequestParam(required = false) String email) {
 
-        // Si aucun email fourni, on récupère celui de l'utilisateur connecté via JWT
         if (email == null) {
             Authentication authentication = SecurityContextHolder.getContext().getAuthentication();
             email = authentication.getName();
@@ -209,6 +199,4 @@ public class TacheController {
 
         return ResponseEntity.ok(tacheService.getTachesParEmailConsultant(email));
     }
-
-
 }
